--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #b8943c;
+    background: #68562a;
 }
 
 .logo-icon img {
@@ -96,11 +96,13 @@ body {
 
 /* === NAV MENU === */
 .nav-menu a {
+    font-size: 15px;
     margin-left: 20px;
     color: #e6d5b8;
     text-decoration: none;
     border: 1px solid #6b5c3a;
-    padding: 10px 18px;
+    padding-bottom: 5px;
+    padding: 15px 25px;
     border-radius: 30px;
     transition: 0.3s;
 }
@@ -209,6 +211,8 @@ body {
 }
 
 .anggota-card {
+    display: flecx;
+    flex-direction: column;
     width: 280px;
     padding: 25px;
     border-radius: 22px;
@@ -217,6 +221,12 @@ body {
     box-shadow: 0 0 15px rgba(209, 170, 74, 0.1);
     text-align: left;
     background: #6c5113;
+}
+
+.anggota-top {
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 
 .anggota-foto {
@@ -228,10 +238,13 @@ body {
 }
 
 .anggota-foto img {
-    width: 100%;
-    height: 100%;
     object-fit: cover; /* supaya proporsinya tetap */
     border-radius: 12px; /* sama kaya div sebelumnya */
+}
+
+.anggota-top h1 {
+    font-size: 28px;
+    margin: 0;
 }
 
 .anggota-card h3 {
@@ -319,6 +332,13 @@ body {
 .materi-text h2 {
     font-size: 30px;
     margin-bottom: 15px;
+    font-style: italic;
+}
+
+.materi-text h1 {
+    font-size: 15px;
+    margin-bottom: 15px;
+    font-style: italic;
 }
 
 .materi-text p {
